# MAgEC

./: .gitignore  LICENSE  MAgEC_CaseStudies.ipynb  MAgEC_Results.ipynb  MAgEC_SHAP_RBO.ipynb  MAgEC_Static_Cases.ipynb  MIMIC_ANNO.ipynb  MIMIC_MAGEC_PRESENTATION-BN.ipynb  MIMIC_MAGEC_PRESENTATION.ipynb  MIMIC_MV.ipynb  MIMIC_MV_LSTM.ipynb  MIMIC_MV_MAGEC.ipynb  MIMIC_MV_RBO.ipynb  MIMIC_MV_STATIC_MODELS.ipynb  PIMA_MAGEC.ipynb  PIMA_MAGEC_PRESENTATION-BN.ipynb  PIMA_MAGEC_PRESENTATION.ipynb  README.md  ZmagecConsensus.ipynb  environment.yml  magec_sensitivity.py  magec_utils.py  mimic_queries.py  mimic_utils.py  pima_model_sts.h5  pima_utils.py  pyproject.toml  requirements.txt
notebooks/: MAgEC_SHAP_RBO.ipynb  MIMIC_MV.ipynb  PIMA_MAGEC_PRESENTATION.ipynb
src/: magec_utils.py  mimic_data.py  mimic_queries.py  mimic_utils.py  pima_utils.py
src/configs/: pima_diabetes.yaml  stroke_prediction.yaml
src/data/: linear_data.csv
src/magec/: __main__.py  runner.py
src/table15/: __main__.py  configs.py  magec_utils.py  pima_utils.py  pipeline_utils.py  runner.py
src/table15/configs/: pima_diabetes.yaml  stroke_prediction.yaml  synth_data_configs.yaml
src/table15/configs/data_configs/: pima_full.yaml  pima_lite.yaml  stroke_full.yaml
src/table15/configs/model_configs/deep_models_configs/: multi_layer_perceptron_1.yaml
src/table15/configs/model_configs/ensemble_configs/: random_forrest_cc_1  voting_classifier_1.yaml
src/table15/configs/model_configs/linear_model_configs/: lr_1.yaml  lr_2.yaml  lr_cv_1.yaml
src/table15/configs/model_configs/svm_configs/: linear_svm_cc_1.yaml  svm_1.yaml
src/table15/configs/pipeline_configs/: linear.yaml  pima.yaml  stroke.yaml  synth_data.yaml
src/table15/models/: deep_models.py  ensemble_models.py  linear_models.py  model.py  model_factory.py  svm_models.py  test_linear_model.py
src/table15/perturbations/: group_perturbation.py  perturbation.py  z_perturbation.py
src/table15/utils/: data_tables.py  data_utils.py  magec_utils.py  model_utils.py  models_container.py  pima_utils.py  pipeline_utils.py
tests/: test_magec_utils.py  test_perturbations.py  test_pipeline_utils.py
tests/configs/: t_configs.yaml
