[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table15"
version = "1.0.0"
description = "TBD"
readme = "README.md"
authors = [{ name = "Rajas Kale", email = "rajas.kale@anthem.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["TBD"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://https://github.com/KaleRP/table15"

[project.scripts]
table15 = "table15.__main__:main"